--- a/css/styles.css
+++ b/css/styles.css
@@ -1,100 +1,28 @@
-ul {
-    list-style-type: none;
-}
-
-ul li {
-    padding-bottom: 15px;
-}
-
-/* *********************************************************************************** */
-
-.back-to-main {
-    position: relative;
-    left: 10px;
-    padding: 10px 10px 10px 10px;
-    color: rgb(43, 93, 219);
-}
-
-.back-to-main:hover {
-    color: rgb(225, 36, 36);
-}
-
-.back-to-main:active {
-    color: rgb(49, 158, 114);
-}
-
-/* *********************************************************************************** */
-
-.dropdown {
+button {
     position: absolute;
-    display: block;
-    left: 150px;
-}
-
-.dropdown-name {
-    color: white;
-    padding: 16px;
-    font-size: 20px;
-    border: none;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    top: 75px;
-    background: #f1f1f1;
-    width: 220px;
-    z-index: 1;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    border-bottom: 2px solid white;
-}
-
-.dropdown-content a:hover {
-    background: #ddd;
-    color: coral;
-}
-
-/* *********************************************************************************** */
-
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-  
-/* Modal Content */
-.modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    width: 30%;
-    text-align: center;
-}
-
-.modal-content #ok-btn {
-    background-color: rgb(51, 180, 115);
-    color: white;
     padding: 10px 20px;
     width: 275px;
     cursor: pointer;
-    border: none;
+    border-radius: 5px;    
+    color: white;
+    font-weight: bold;
+}
+
+/* *********************************************************************************** */
+
+input {
+    height: 25px;
+    width: 300px;
+    border-radius: 4px; 
+    border: 1px solid #CCCCCC;
+}
+
+/* *********************************************************************************** */
+
+.tabular-layout {
+    font-size: 16px;
+    color: #343A40;
+    border: 2px solid #343A40;
+    border-radius: 5px;
+    padding: 5px;
 }
