--- a/css/searching-in-bank-accounts.css
+++ b/css/searching-in-bank-accounts.css
@@ -1,22 +1,19 @@
 .searching-in-bank-accounts-view {
     height: 125px;
-    width: auto;
+    width: 670px;
+    padding: 10px;
 }
 
 /* *********************************************************************************** */
 
 .searching-in-bank-accounts-view button {    
-    top: 75px;
+    top: 90px;
 }
 
 .searching-in-bank-accounts-view #search-btn {   
-    left: 20px; 
-    background: #0069D9;  
-    border: 2px solid #0069D9;    
+    left: 20px;   
 }
 
 .searching-in-bank-accounts-view #reset-btn {    
     left: 375px;
-    background: #C82333;   
-    border: 2px solid #C82333; 
 }
